--- a/booksearch/index.html
+++ b/booksearch/index.html
@@ -8,10 +8,10 @@
 
 <body>
 	<div class="bg">
-	<h1>Book Finder</h1>
+	<h1><span>Book Search</span></h1>
 
 	<div class="input">
-	<input id="search" placeholder="Title or Author">
+	<input id="search" size="30" placeholder="Title or Author">
 	<button id="button" type="button">Click Me</button>
 	</div>
 
